--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,10 +13,19 @@
         android:theme="@style/Theme.SimpleOLX"
         tools:targetApi="31">
         <activity
+            android:name=".AddNewActivity"
+            android:exported="false" />
+        <activity
+            android:name=".EditAdActivity"
+            android:exported="false" />
+        <activity
             android:name=".ExploreAdsActivity"
             android:exported="false" />
         <activity
             android:name=".MyAccountActivity"
+            android:exported="false" />
+        <activity
+            android:name=".MyAdsActivity"
             android:exported="false" />
         <activity
             android:name=".SellerHomeActivity"
@@ -26,6 +35,9 @@
             android:exported="false" />
         <activity
             android:name=".LoginActivity"
+            android:exported="false" />
+        <activity
+            android:name=".AdDetailActivity"
             android:exported="false" />
         <activity
             android:name=".HomeActivity"
