--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <application
+        android:name=".AppContext"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -12,12 +13,6 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SimpleOLX"
         tools:targetApi="31">
-
-        <activity
-            android:name=".SplashScreenActivity"
-            android:theme="@style/SplashTheme"
-            android:exported="true">
-        </activity>
 
         <activity
             android:name=".AddNewActivity"
@@ -52,6 +47,11 @@
         <activity
             android:name=".HomeActivity"
             android:exported="true">
+        </activity>
+        <activity android:name=".SplashActivity"
+            android:theme="@style/SplashTheme"
+            android:exported="true"
+            android:noHistory="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
