--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SimpleOLX"
         tools:targetApi="31">
-
+        <activity
+            android:name=".User.AllItemsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Admin.Activities.AddCategoryActivity"
+            android:exported="false" />
         <activity
             android:name=".AddNewActivity"
             android:exported="false" />
@@ -34,7 +39,9 @@
             android:exported="false" />
         <activity
             android:name=".AdminActivity"
-            android:exported="false" />
+            android:exported="true">
+
+        </activity>
         <activity
             android:name=".RegisterActivity"
             android:exported="false" />
@@ -46,14 +53,15 @@
             android:exported="false" />
         <activity
             android:name=".HomeActivity"
-            android:exported="true">
-        </activity>
-        <activity android:name=".SplashActivity"
-            android:theme="@style/SplashTheme"
+            android:exported="true"></activity>
+        <activity
+            android:name=".SplashActivity"
             android:exported="true"
-            android:noHistory="true">
+            android:noHistory="true"
+            android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
