--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.WRITE_APN_SETTINGS" />
+
     <application
         android:name=".AppContext"
         android:allowBackup="true"
@@ -13,6 +18,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SimpleOLX"
         tools:targetApi="31">
+        <activity
+            android:name=".Admin.Activities.UserReportActivity"
+            android:exported="false" />
         <activity
             android:name=".Admin.Activities.AdRequestActivity"
             android:exported="false" />
